# My-Blog

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.py  setup.cfg  setup.py
My-Blog/: .gitignore  run.py
My-Blog/shareideas/: __init__.py  config.py  shareideas.db
My-Blog/shareideas/main/: routes.py
My-Blog/shareideas/posts/: routes.py
My-Blog/shareideas/static/css/custom/: blog.css
My-Blog/shareideas/templates/: contact.html  home.html  reset_token.html
My-Blog/shareideas/templates/errors/: 403.html  404.html
My-Blog/shareideas/users/: forms.py  routes.py
shareideas/: .gitignore  __init__.py  models.py  shareideas.db
shareideas/main/: routes.py
shareideas/posts/: routes.py
shareideas/static/js/: typed.js
shareideas/templates/: about.html  account.html  base.html  contact.html  create_post.html  home.html  layout.html  login.html  post.html  register.html  request_reset.html  reset_token.html  user_posts.html
shareideas/templates/errors/: 403.html  404.html  500.html
shareideas/users/: forms.py  routes.py  utils.py
