[metadata]
name = shareideas
version = 0.0.1
url = https://lastofthedinosaurs.io
license = BSD-3-Clause
maintainer = LastoftheDinosaurs
maintainer_email = thelastofthedinosaur@gmail.com
description = The personal website of LastoftheDinosaurs.
long_description = file: README.md
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    lastofthedinosaurs